--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/f65d705856.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,9 +24,23 @@
             <ul>
                 <li>About us</li>
                 <li>Developer</li>
-                <li class="nav-item">Follow us</li>
+                <li class="nav-item">Follow us <i class="fa-brands fa-youtube" style="color: #da1043;"></i> <i class="fa-brands fa-tiktok"></i></li>
             </ul>
         </nav>
+        <section class="banner-section">
+            <div class="banner-content">
+                <h2 class="banner-title">Play Like The</h2>
+                <h1 class="banner-title1">G.O.A.T.</h1>
+                <p class="banner-des">1-Click instant play</p>
+                <p class="banner-des">No Download</p>
+                <p class="banner-des">1000s of supported online games</p>
+                <button class="primary-btn">Sign In</button>
+                <button class="sec-btn">Go Rogue</button>
+            </div>
+            <div class="banner-img-container">
+                <img class="banner-img" src="./images/Group 18.png" alt="">
+            </div>
+        </section>
     </header>
     <main></main>
     <footer></footer>
