--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             <ul>
                 <li>About us</li>
                 <li>Developer</li>
-                <li class="nav-item">Follow us <i class="fa-brands fa-youtube" style="color: #da1043;"></i> <i class="fa-brands fa-tiktok"></i></li>
+                <li class="nav-item">Follow us <i class="fa-brands fa-youtube" style="color: #da1043;"></i> <i
+                        class="fa-brands fa-tiktok"></i></li>
             </ul>
         </nav>
         <section class="banner-section">
@@ -42,7 +43,50 @@
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <!-- online game starts here  -->
+        <section class="online-games">
+            <h1 class="online-title">Online Games <span class="gradient">Funny Videos</span></h1>
+            <p class="online-des">A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="online-games-container">
+                <div class="games-card">
+                    <img src="./images/Rectangle 7.png" alt="" class="games-img">
+                    <p class="games-des">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="games-card">
+                    <img src="./images/Rectangle 4.png" alt="" class="games-img">
+                    <p class="games-des">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="games-card">
+                    <img src="./images/Rectangle 5.png" alt="" class="games-img">
+                    <p class="games-des">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+                <div class="games-card">
+                    <img src="./images/Rectangle 6.png" alt="" class="games-img">
+                    <p class="games-des">No Download. No Installs. Play games Instantly on Gamer.</p>
+                </div>
+
+            </div>
+        </section>
+        <!-- online game ends here  -->
+        <!-- play instant start here   -->
+        <section class="play-instant-section">
+            <div class="play-instant-container">
+                <div class="play-instant-content">
+                    <h1 class="play-title"><span class="pink">Play Instantly,</span>
+                        No Downloads
+                        No Installs.</h1>
+                    <p class="game-des">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                </div>
+                <div class="play-imgs-container">
+                    <img class="play-img" src="./images/Rectangle 55.png" alt="">
+                    <img class="play-img" src="./images/Rectangle 66.png" alt="">
+                </div>
+            </div>
+
+        </section>
+        <!-- play instant ends here   -->
+    </main>
     <footer></footer>
 
 </body>
