--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
                     <h1 class="play-title"><span class="pink">Play Instantly,</span>
                         No Downloads
                         No Installs.</h1>
-                    <p class="game-des">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                    <p id="des" class="play-des">Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
                 </div>
                 <div class="play-imgs-container">
-                    <img class="play-img" src="./images/Rectangle 55.png" alt="">
-                    <img class="play-img" src="./images/Rectangle 66.png" alt="">
+                    <img class="play-img big-img" src="./images/Rectangle 55.png" alt="">
+                    <img class="play-img small-img" src="./images/Rectangle 66.png" alt="">
                 </div>
             </div>
 
