--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
             <h1 class="logo-text white"><span class="pink">G</span>amer</h1>
         </div>
         <div class="footer-list">
-            <span class="footer-item">Our Story</span>
-            <span class="footer-item">Games</span>
-            <span class="footer-item">Web Games</span>
-            <span class="footer-item">Careers</span>
-            <span class="footer-item">Support</span>
-            <span class="footer-item">My Account</span>
+            <div class="footer-item"><p>Our Story</p></div>
+            <div class="footer-item"><p>Games</p></div>
+            <div class="footer-item"><p>Web Games</p></div>
+            <div class="footer-item"><p>Careers</p></div>
+            <div class="footer-item"><p>Support</p></div>
+            <div class="footer-item"><p>My Account</p></div>
         </div>
         <div class="icon-container">
             <div class="footer-list">
@@ -165,11 +165,11 @@
             </div>
 
         </div>
-        <div class="footer-list">
-            <span class="footer-item footer-item-3">Terms and Conditions</span>
-            <span class="footer-item footer-item-3">Privacy Policy</span>
-            <span class="footer-item footer-item-3">Cookie Policy</span>
-            <span class="footer-item footer-item-3">Privacy Settings</span>
+        <div class="footer-list footer-list2">
+            <div class="footer-item footer-item-3"><p>Terms and Conditions</p></div>
+            <div class="footer-item footer-item-3"><p>Privacy Policy</p></div>
+            <div class="footer-item footer-item-3"><p>Cookie Policy</p></div>
+            <div class="footer-item footer-item-3"><p>Privacy Settings</p></div>
         </div>
         <p class="footer-text">Play Games &copy; Gamer 2000-2023 Gamer Bangladesh</p>
     </footer>
