--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
            
         </section>
     </main>
+    <!-- footer start here  -->
     <footer>
         <div class=" footer-container">
             <img class="logo" src="./images/Frame.png" alt="">
