--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
             <ul>
                 <li>About us</li>
                 <li>Developer</li>
-                <li class="nav-item">Follow us <i class="fa-brands fa-youtube" style="color: #da1043;"></i> <i
-                        class="fa-brands fa-tiktok"></i></li>
+                <li class="nav-item">Follow us <a id="youtube-icon" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"
+                            style="color: #dc1818;"></i></a>
+                    <a href="https://www.tiktok.com/en/"><i class="fa-brands fa-tiktok"></i></a>
+                    
+                </li>
             </ul>
         </nav>
         <section class="banner-section">
