--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f65d705856.js" crossorigin="anonymous"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/mobile.css">
     <link rel="stylesheet" href="./style/tablet.css">
@@ -13,6 +17,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
+
     <title>Gamer</title>
 </head>
 
@@ -26,10 +31,10 @@
             <ul>
                 <li>About us</li>
                 <li>Developer</li>
-                <li class="nav-item">Follow us <a id="youtube-icon" href="https://www.youtube.com/"><i class="fa-brands fa-youtube"
-                            style="color: #dc1818;"></i></a>
+                <li class="nav-item">Follow us <a id="youtube-icon" href="https://www.youtube.com/"><i
+                            class="fa-brands fa-youtube" style="color: #dc1818;"></i></a>
                     <a href="https://www.tiktok.com/en/"><i class="fa-brands fa-tiktok"></i></a>
-                    
+
                 </li>
             </ul>
         </nav>
@@ -118,39 +123,39 @@
         <!-- play instant ends here   -->
         <section class="catagories-section">
             <div class="cat-box">
-                <img src="./images/Rectangle 11.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 11.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 12.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 12.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 13.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 13.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 14.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 14.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 15.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 15.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 16.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 16.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 17.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 17.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 18.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 18.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
             <div class="cat-box">
-                <img src="./images/Rectangle 19.png" alt="">
+                <img class="cat-img" src="./images/Rectangle 19.png" alt="">
                 <p class="cat-des">Action Games</p>
             </div>
 
